--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -52,7 +52,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>gr.meallab.app.App</mainClass>
+                    <mainClass>gr.meallab.App</mainClass>
                 </configuration>
             </plugin>
 
