--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -16,6 +16,12 @@
 
     <dependencies>
 
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.15.3</version>
+</dependency>
+
         <!-- ΣΥΝΔΕΣΗ ΜΕ ΤΟ API -->
         <dependency>
             <groupId>gr.meallab</groupId>
