--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,19 @@
 
     <dependencies>
 
+    <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.10.0</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.10.0</version>
+    <scope>test</scope>
+</dependency>
+
         <!-- HTTP -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
